CTS2FW-23.  Removing soap Unit tests