@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mayo.cts2</groupId>
 	<artifactId>cts2-framework</artifactId>
-	<version>1.1.3-SNAPSHOT</version>
+	<version>1.2.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>CTS2 Development Framework</name>
@@ -238,8 +238,6 @@
 							<argLine>-Xmx1028m</argLine>
 							<argLine>-XX:MaxPermSize=${test.permgen.max}</argLine>
 							<excludes>
-<!-- 								<exclude>**/*IT.*</exclude> -->
-								<exclude>edu.mayo.cts2.framework.webapp.soap.*</exclude>
 							</excludes>
 							<systemProperties>
 								<systemProperty>
@@ -249,23 +247,6 @@
 							</systemProperties>
 						</configuration>
 					</execution>
-<!-- 					<execution>
-						<id>integration-tests</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>test</goal>
-						</goals>
-						<configuration>
-							<argLine>-Xmx1028m</argLine>
-							<argLine>-XX:MaxPermSize=${test.permgen.max}</argLine>
-							<excludes>
-								<exclude>edu.mayo.cts2.framework.webapp.soap.endpoint.codesystem.*</exclude>
-							</excludes>
- 							<includes>
-								<include>**/*IT.*</include>
-							</includes>
-						</configuration>
-					</execution> -->
 				</executions>
 			</plugin>
 
